--- a/TranspoLink/Views/Shared/_Layout.cshtml
+++ b/TranspoLink/Views/Shared/_Layout.cshtml
@@ -134,7 +134,7 @@
             {
                 @* Non-Admin Navigation *@
                 <li><a href="/">Home</a></li>
-                <li><a href="/Booking/Book">Booking</a></li>
+                <li><a href="/Booking/Index">My Bookings</a></li>
                 <li><a href="/#features">Features</a></li>
                 <li><a href="/#trending">News & Offers</a></li>
                 <li><a href="/#contact">Contact</a></li>
