--- a/TranspoLink/Views/Shared/_Layout.cshtml
+++ b/TranspoLink/Views/Shared/_Layout.cshtml
@@ -138,6 +138,8 @@
                 <li><a href="/#trending">News & Offers</a></li>
                 <li><a href="/#contact">Contact</a></li>
                 <li><a href="/Home/AboutUs">About Us</a></li>
+                <li> <a asp-controller="Booking" asp-action="BookingList" 
+               style= font-weight: bold; Booking List </a> </li>
             }
         </ul>
     </nav>
