--- a/TranspoLink/Views/Booking/Index.cshtml
+++ b/TranspoLink/Views/Booking/Index.cshtml
@@ -15,7 +15,7 @@
     {
         <div class="empty-booking-state">
             <p>You haven't made any bookings yet.</p>
-            <a href="/Home/Index" class="btn-book-now">Start Your Journey</a>
+            <a href="/Booking/TripList" class="btn-book-now">Start Your Journey</a>
         </div>
     }
     else
