--- a/TranspoLink/Views/Shared/_Layout.cshtml
+++ b/TranspoLink/Views/Shared/_Layout.cshtml
@@ -136,7 +136,7 @@
             {
                 <li><a href="/">Home</a></li>
                 <li><a href="/Booking/TripList">BookTrip</a></li>
-                <li><a href="/Booking/BookingHistory">My Bookings</a></li>
+                <li><a href="/Booking/Index">My Bookings</a></li>
                 <li><a href="/#features">Features</a></li>
                 <li><a href="/#trending">News & Offers</a></li>
                 <li><a href="/#contact">Contact</a></li>
